--- a/Test/index.html
+++ b/Test/index.html
@@ -1,1 +1,6 @@
 <input type=text name=val2 size=10>
+                            </span>
+                            <input type="text" name="ghusername" class="input-username js-entered-user">
+                            <span class="icon-close js-clear-input-btn is-hidden">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </span>
