--- a/Test/index.html
+++ b/Test/index.html
@@ -1,6 +1,19 @@
 <input type=text name=val2 size=10>
+                    <form method="get" name="userinput" action="#" class="user-search js-submit-form cf">
+                        <div class="input-wrap" tabindex="1">
+                            <span class="icon-user">
+                                <span class="glyphicon glyphicon-user"></span>
                             </span>
                             <input type="text" name="ghusername" class="input-username js-entered-user">
                             <span class="icon-close js-clear-input-btn is-hidden">
                                 <span class="glyphicon glyphicon-remove"></span>
                             </span>
+                        </div>
+                        <button type="submit" class="btn-search">Search</button>
+                    </form>
+
+
+
+        <script type="text/javascript" src="assets/js/main.js"></script>
+    </body>
+</html>
