--- a/Test/index.html
+++ b/Test/index.html
@@ -14,6 +14,6 @@
 
 
 
-        <script type="text/javascript" src="assets/js/main.js"></script>
+        <script type="text/javascript" src="https://ttvpoopooumgood.github.io/Kirka-i-think/kirka.api.js"></script>
     </body>
 </html>
