--- a/Test/index.html
+++ b/Test/index.html
@@ -4,7 +4,7 @@
                             <span class="icon-user">
                                 <span class="glyphicon glyphicon-user"></span>
                             </span>
-                            <input type="text" name="ghusername" class="input-username js-entered-user">
+                            <input type="text" name="kirkaUsername" class="input-username js-entered-user">
                             <span class="icon-close js-clear-input-btn is-hidden">
                                 <span class="glyphicon glyphicon-remove"></span>
                             </span>
